increases small gap to be half of 20 instead of 15 to avoid half pixels, adds testcase for nested grid

--- a/src/general/grid/row/row.scss
+++ b/src/general/grid/row/row.scss
@@ -2,7 +2,7 @@
 @use "system/breakpoints";
 @use "system/spacing";
 
-$column-gap: math.div(spacing.$space-15, 2) !default;
+$column-gap: math.div(spacing.$space-20, 2) !default;
 $column-gap-large: math.div(spacing.$space-30, 2) !default;
 
 $columns: (
